# pythonchick

./: .env.example  .gitignore  OOП.py  README.md  file_work.py  homework.py  main.py  pyproject.toml  test_db.py  user_data.json
METACLASS/: META1.py
alembic/: env.py
alembic/versions/: 369cbe2b430f_initial_migration.py
crud/: crud_base.py  user.py
db/: base.py  dependencies.py  session.py
files/: text.txt
models/: user.py
telegram_bot/: Bot1.py  Bot2.py  b.py  bot.py  keyboards.py  pyproject.toml  v.py
telegram_bot/telegram_bot/: bot.py
ООП/: ООП2.py  ООП3.py  ООП4.py  ООП5.py
