[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Anton <anton.kiriliuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.6.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
